add json content type

--- a/src/main/resources/api-config.properties
+++ b/src/main/resources/api-config.properties
@@ -1,2 +1,2 @@
-api-baseurl=https://www.almosafer.com/en
-content-type= text/html
+api-baseurl=https://www.almosafer.com
+content-type= application/json
